# CubeWorld

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  start.bat  vcpkg.json
client/: CMakeLists.txt
client/assets/shaders/: block.frag  block.vert  entity.frag  entity.vert  hud.frag  hud.vert  triangle.frag  triangle.vert
client/src/: CubeWorldLayer.cpp  CubeWorldLayer.h  main.cpp
client/src/net/: IntegratedServer.cpp  IntegratedServer.h  NetClient.cpp  NetClient.h
client/src/player/: PlayerController.cpp  PlayerController.h  VoxelRaycast.cpp  VoxelRaycast.h
client/src/render/: BlockTextures.h  ChunkMesher.cpp  ChunkMesher.h  EntityRenderer.cpp  EntityRenderer.h  HudRenderer.cpp  HudRenderer.h
engine/: CMakeLists.txt
engine/include/ce/core/: Application.h  Layer.h  Window.h
engine/include/ce/event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
engine/include/ce/input/: Input.h  KeyCodes.h  MouseCodes.h
engine/include/ce/render/: Buffer.h  BufferLayout.h  Camera.h  Mesh.h  Renderer.h  Shader.h  Texture.h  VertexArray.h
engine/include/ce/util/: Log.h
engine/src/core/: Application.cpp  Window.cpp
engine/src/input/: Input.cpp
engine/src/render/: Buffer.cpp  Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
net/: CMakeLists.txt
net/include/net/: ByteBuffer.h  Host.h
net/src/: ByteBuffer.cpp  Host.cpp
server/: CMakeLists.txt
server/src/: main.cpp
shared/: CMakeLists.txt
shared/include/cw/craft/: Crafting.h
shared/include/cw/entity/: Entity.h
shared/include/cw/item/: Inventory.h  Item.h
shared/include/cw/proto/: Protocol.h
shared/include/cw/server/: Persistence.h  Server.h
shared/include/cw/sim/: DayCycle.h  PlayerMovement.h  Simulation.h
shared/include/cw/world/: Block.h  Chunk.h  World.h
shared/src/craft/: Crafting.cpp
shared/src/item/: Inventory.cpp
shared/src/proto/: Protocol.cpp
shared/src/server/: Persistence.cpp  Server.cpp
shared/src/sim/: PlayerMovement.cpp  Simulation.cpp
shared/src/world/: Chunk.cpp  World.cpp
tests/: CMakeLists.txt  worldgen_tests.cpp
tools/: make_atlas.py  make_font.py  make_test_texture.py
